# OpenALaw

./: .gitignore  Android.mk  AndroidManifest.xml  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  GITHUB_SETUP_INSTRUCTIONS.md  INITIALIZATION_REPORT.md  LICENSE  README.md  README_cn.md  android-core-bridge.js  arm-optimizations.md  build_config.json  core.js  index.js  logo.txt  memory-alignment-check.cpp  package.json  setup_arm_cross_compile.sh
java/org/openalaw/: MainActivity.java  OpenALawService.java
res/values/: strings.xml
res/xml/: accessibility_service_config.xml
